fix typo and missing link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ title: Personal Genome Project: Global Network
                 Research Center for Molecular Medicine of the Austrian
                 Academy of Sciences.
               </p>
-              <a class="btn btn-default" href="genom-austria.html">
+              <a class="btn btn-default" href="http://genomaustria.at/das-projekt/">
                 Go to Genom Austria website (German language)</a>
             </li>
 
@@ -178,7 +178,7 @@ title: Personal Genome Project: Global Network
           This website listing the Global Network of Personal Genome Projects
           is maintained by <a href="http://openhumansfoundation.org">Open
           Humans Foundation</a>, a United States 501(c)(3)
-          nonprofit organization. You may the OHF website to contact this
+          nonprofit organization. You may visit the OHF website to contact this
           organization about issues with this webpage.
         </p>
       </div> <!-- /#contact -->
