Fix display issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ title: Personal Genome Project: Global Network
     <div class="container">
 
       <div class="row lead-row">
-        <div id="about" class="col-xs-8 col-md-9 lead-div anchor-offset">
+        <div class="col-xs-8 col-md-9 lead-div">
+          <a id="about" class="anchor-offset"></a>
           <h1>The Personal Genome Project</h1>
           <p class="lead">
             The Personal&nbsp;Genome Project, initiated in 2005, is a vision
@@ -55,7 +56,8 @@ title: Personal Genome Project: Global Network
         </div>
       </div>
 
-      <div id="projects" class="row anchor-offset">
+      <div class="row">
+        <a id="projects" class="anchor-offset"></a>
 
         <div class="col-xs-12">
           <h2>Projects</h2>
@@ -98,7 +100,7 @@ title: Personal Genome Project: Global Network
                 Go to the PGP UK website</a>
             </li>
 
-            <li>
+            <li style="z-index:1000">
               <h3>Genom Austria (Austria)</h3>
               <p>
                 Founded in November 2014, Genom Austria is based at the CeMM
@@ -112,8 +114,8 @@ title: Personal Genome Project: Global Network
           </ul>
 
         </div>
-
-        <div id="project-guidelines" class="col-xs-12 anchor-offset">
+        <div class="col-xs-12">
+          <a id="project-guidelines" class="anchor-offset"></a>
 
           <h3>Global Network Guidelines</h3>
 
@@ -163,25 +165,31 @@ title: Personal Genome Project: Global Network
 
       <hr>
 
-      <div id="news" class="anchor-offset">
-        <h2>News</h2>
-        <p>
-          {% include news.html %}
-        </p>
-      </div> <!-- /#projects -->
+      <div class="row">
+        <div class="col-xs-12">
+          <a id="news" class="anchor-offset"></a>
+          <h2>News</h2>
+          <p>
+            {% include news.html %}
+          </p>
+        </div>
+      </div> <!-- /#news .row -->
 
       <hr>
 
-      <div id="contact" class="anchor-offset">
-        <h2>Contact Information</h2>
-        <p>
-          This website listing the Global Network of Personal Genome Projects
-          is maintained by <a href="http://openhumansfoundation.org">Open
-          Humans Foundation</a>, a United States 501(c)(3)
-          nonprofit organization. You may visit the OHF website to contact this
-          organization about issues with this webpage.
-        </p>
-      </div> <!-- /#contact -->
+      <div class="row">
+        <div class="col-xs-12">
+          <a id="contact" class="anchor-offset"></a>
+          <h2>Contact Information</h2>
+          <p>
+            This website listing the Global Network of Personal Genome Projects
+            is maintained by <a href="http://openhumansfoundation.org">Open
+            Humans Foundation</a>, a United States 501(c)(3)
+            nonprofit organization. You may visit the OHF website to contact this
+            organization about issues with this webpage.
+          </p>
+        </div>
+      </div> <!-- /#contact .row -->
 
     </div><!-- /.container -->
 
