Highlight local sites instead of redirect

--- a/pages/gb.html
+++ b/pages/gb.html
@@ -1,5 +1,6 @@
 ---
 title: Personal Genome Project Global Network
+permalink: gb.html
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -47,6 +48,10 @@ title: Personal Genome Project Global Network
             participants to publicly share their personal data
             for the greater good.
           </p>
+          <div class="local-projects">
+            <span class="local-projects-header">Local Projects</span>
+            {% include pgp-uk.html %}
+          </div>
         </div>
         <div class="col-xs-4 col-md-3 lead-div">
           <p class="text-center">
